main page alignment bug fixed

--- a/app/responsive.css
+++ b/app/responsive.css
@@ -318,16 +318,16 @@
 
     .hero-content {
         width: 100% !important;
+        margin-top: 100px !important;
     }
 
     div[class*="text-[68px]"],
     div[class*="text-[64px]"],
     .hero-head {
-        margin-top: 50px !important;
         font-size: 30px !important;
         font-size: 38px !important;
         line-height: 42px !important;
-        font-weight: 500;
+        font-weight: 600;
     }
 
     .cloud-left,
@@ -346,7 +346,6 @@
         top: 170px;
     }
 
-
     .hero-img {
         width: 350px;
         height: 100%;
@@ -356,7 +355,7 @@
 
     div.hero-content-text {
         font-size: 16px !important;
-        padding-top: 10px;
+        padding-top: 20px;
         width: 100% !important;
     }
 
@@ -425,9 +424,15 @@
         text-align: left !important;
     }
 
+    .feature-box-content-block .feature-box-subhead {
+        font-size: 16px !important;
+        margin-top: 0 !important;
+    }
+
     .feature-box-content-block .feature-box-head {
-        font-size: 26px !important;
-        line-height: 30px !important;
+        margin-top: 10px;
+        font-size: 28px !important;
+        line-height: 32px !important;
     }
 
     .feature-box-content-block .feature-box-content {
@@ -443,6 +448,10 @@
 
     .feature-box-features {
         margin-top: 40px;
+    }
+
+    .feature-box-feature-btn {
+        padding-block: 12px;
     }
 
     .feature-box-container>.feature-box-image-block {
@@ -477,6 +486,7 @@
 
     .hero6 .hero6-head {
         font-size: 15px;
+        width: 80% !important;
     }
 
     .hero6-content,
